--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="dark bg-black">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
@@ -7,9 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div class="bg-black">
       <div id="app"></div>
-    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
