--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="dark bg-slate-950">
   <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue 3 Dashboard</title>
