--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="dark bg-slate-950">
+<html lang="en" class="dark bg-gray-900">
   <head>
     <meta charset="UTF-8">
     <meta name="robots" content="noindex, nofollow">
     <link rel="icon" href="/favicon.ico">
+    <link
+      href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+      rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue 3 Dashboard</title>
   </head>
